# ar-ai-exe

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .env.example  Dockerfile  Dockerfile.dev  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260517_0001_initial_neon_schema.py  20260519_0003_two_pass_reconstruction.py  20260527_0005_design_preview_bakes.py  20260528_0006_design_assets.py
backend/app/: main.py
backend/app/api/: auth.py  deps.py  design_assets.py  designs.py  exports.py  models.py  scan_sessions.py  system.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: auth.py  common.py  design.py  design_asset.py  export.py  model_asset.py  scan.py  system.py
backend/app/services/: blender_service.py  colmap_service.py  command_runner.py  decal_baker.py  design_assets.py  designs.py  export_packages.py  file_helpers.py  model_assets.py  openmvs_service.py  reconstruction.py  reconstruction_toolchain.py  scan_sessions.py  users.py
backend/app/workers/: reconstruction_worker.py
backend/tests/: test_decal_baker.py  test_design_assets.py
deploy/: backend.dev.env  backend.env.example
docs/: api-contract.md  architecture.md  current-neon-system-flow.md  e2e-demo-script.md  implementation-flows.md  neon-postgres-rollout-plan.md  quality-report-schema.md  scan-guidelines.md  vps-android-deployment.md
frontend/: Dockerfile.dev  index.html  package-lock.json  (+3 more)
(+40 files in other folders)
